JBPM-9659: Upgrade deployments to WildFly 23 (#3660)
* Fixing enforcing issues

* removing unwanted file

* jul-22-save-1 (#2)

* Fix GWT compilation (#3)

* Jakarta JSON API (#4)

* empty

* Prepare to add banned dependencies on kie-parent (#5)

* empty

* Remove remaining Java EE 8 spec JARs (#6)

* Excude errai-javax-enterprise (#7)

* Fix tests in optaplanner and kie-wb-common (#8)

* Fix Enforcer configuration (#9)

* Re-add org.glassfish impl JARs (#10)

* Fix some tests (#11)

* Remove unnecessary exclusions (#12)

Co-authored-by: Tiago Bento <1584568+tiagobento@users.noreply.github.com>

--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-standalone/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-standalone/pom.xml
@@ -139,6 +139,11 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.errai</groupId>
+      <artifactId>errai-javax-enterprise</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.errai</groupId>
       <artifactId>errai-validation</artifactId>
       <scope>provided</scope>
     </dependency>
@@ -645,10 +650,6 @@
         <exclusion>
           <groupId>org.apache.activemq</groupId>
           <artifactId>artemis-jms-client</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.jboss.spec.javax.jms</groupId>
-          <artifactId>jboss-jms-api_2.0_spec</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
