--- a/kie-wb-common-screens/kie-wb-common-library/kie-wb-common-library-client/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-library/kie-wb-common-library-client/pom.xml
@@ -162,14 +162,8 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jboss.errai</groupId>
-      <artifactId>errai-javax-enterprise</artifactId>
-      <scope>provided</scope>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
     </dependency>
 
     <dependency>
