Fix dependency for compilation on JDK 11 to JRE 8

--- a/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-svg/kie-wb-common-stunner-svg-gen/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-svg/kie-wb-common-stunner-svg-gen/pom.xml
@@ -36,7 +36,6 @@
   </properties>
 
   <dependencies>
-
     <!-- Stunner. -->
 
     <dependency>
@@ -95,8 +94,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.w3c.css</groupId>
-      <artifactId>sac</artifactId>
+      <groupId>org.w3c</groupId>
+      <artifactId>dom</artifactId>
     </dependency>
 
     <!-- Testing scope. -->
