--- a/kie-wb-common-screens/kie-wb-common-library/kie-wb-common-library-spaces-screen/package.json
+++ b/kie-wb-common-screens/kie-wb-common-library/kie-wb-common-library-spaces-screen/package.json
@@ -48,7 +48,7 @@
     "enzyme-to-json": "3.3.5",
     "jest": "23.5.0",
     "jest-junit": "6.3.0",
-    "lock-treatment-tool": "^0.4.1",
+    "@kie/lock-treatment-tool": "^0.0.1",
     "prettier": "1.14.2",
     "ts-jest": "24.0.2",
     "ts-loader": "4.4.2",
