--- a/kie-wb-common-screens/kie-wb-common-contributors/kie-wb-common-contributors-api/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-contributors/kie-wb-common-contributors-api/pom.xml
@@ -17,4 +17,23 @@
   <properties>
     <java.module.name>org.kie.wb.common.contributors.api</java.module.name>
   </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.jboss.errai</groupId>
+      <artifactId>errai-common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-structure-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-project-api</artifactId>
+    </dependency>
+  </dependencies>
 </project>
