--- a/kie-wb-common-screens/kie-wb-common-contributors/kie-wb-common-contributors-client/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-contributors/kie-wb-common-contributors-client/pom.xml
@@ -70,7 +70,10 @@
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-api</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-project-client</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.kie.workbench.screens</groupId>
