--- a/kie-wb-common-screens/kie-wb-common-library/kie-wb-common-library-spaces-screen/package.json
+++ b/kie-wb-common-screens/kie-wb-common-library/kie-wb-common-library-spaces-screen/package.json
@@ -29,9 +29,10 @@
     "outputDirectory": "./target"
   },
   "dependencies": {
-    "@types/react": "16.4.18",
+    "@types/react": "16.14.5",
     "appformer-js": "./target/appformer-js",
-    "react": "16.6.0"
+    "react": "16.14.0",
+    "react-dom": "16.14.0"
   },
   "devDependencies": {
     "@types/enzyme": "3.1.15",
