--- a/kie-wb-common-services/kie-wb-common-data-modeller-core/pom.xml
+++ b/kie-wb-common-services/kie-wb-common-data-modeller-core/pom.xml
@@ -136,10 +136,10 @@
         </exclusion>
       </exclusions>
     </dependency>
-
+    
     <dependency>
-      <groupId>com.fasterxml.jackson.jaxrs</groupId>
-      <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
     </dependency>
 
     <dependency>
