--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-standalone/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-standalone/pom.xml
@@ -641,7 +641,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.antlr4gwt</groupId>
+      <groupId>org.antlr</groupId>
       <artifactId>antlr4gwt-runtime</artifactId>
       <scope>provided</scope>
     </dependency>
