BXMSPROD-2083: use of OptaPlanner final version

--- a/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-templates/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-templates/pom.xml
@@ -62,7 +62,7 @@
         <groupId>org.optaplanner</groupId>
         <artifactId>optaplanner-bom</artifactId>
         <type>pom</type>
-        <version>${project.version}</version>
+        <version>${version.org.optaplanner}</version>
         <scope>import</scope>
       </dependency>
       <dependency>
