[7.67.x-blue] Updating velocity engine gav
Signed-off-by: Jason Porter <lightguard.jp@gmail.com>

--- a/kie-wb-common-services/kie-wb-common-data-modeller-core/pom.xml
+++ b/kie-wb-common-services/kie-wb-common-data-modeller-core/pom.xml
@@ -87,7 +87,7 @@
     <!-- code adf dependencies -->
     <dependency>
       <groupId>org.apache.velocity</groupId>
-      <artifactId>velocity</artifactId>
+      <artifactId>velocity-engine-core</artifactId>
     </dependency>
 
     <!-- java parser dependencies -->
