Update to GWT 2.11.0

--- a/kie-wb-common-services/kie-wb-common-datamodel/kie-wb-common-datamodel-backend/src/test/resources/DataModelDependencyExclusionTest1/pom.xml
+++ b/kie-wb-common-services/kie-wb-common-datamodel/kie-wb-common-datamodel-backend/src/test/resources/DataModelDependencyExclusionTest1/pom.xml
@@ -20,7 +20,7 @@
 
     <!-- Provided scoped dependencies should not be in DMO -->
     <dependency>
-      <groupId>com.google.gwt</groupId>
+      <groupId>org.gwtproject</groupId>
       <artifactId>gwt-user</artifactId>
       <version>2.7.0</version>
       <scope>provided</scope>
