--- a/kie-wb-common-screens/kie-wb-common-library/kie-wb-common-library-client/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-library/kie-wb-common-library-client/pom.xml
@@ -146,7 +146,7 @@
     </dependency>
 
     <dependency>
-      <groupId>com.google.gwt</groupId>
+      <groupId>org.gwtproject</groupId>
       <artifactId>gwt-user</artifactId>
       <scope>provided</scope>
     </dependency>
