--- a/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/pom.xml
@@ -51,7 +51,7 @@
       <artifactId>gwtbootstrap3-extras</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.google.gwt</groupId>
+      <groupId>org.gwtproject</groupId>
       <artifactId>gwt-user</artifactId>
       <scope>provided</scope>
     </dependency>
