--- a/kie-wb-common-services/kie-wb-common-datamodel/kie-wb-common-datamodel-backend/src/test/resources/DataModelDependencyExclusionTest1/pom.xml
+++ b/kie-wb-common-services/kie-wb-common-datamodel/kie-wb-common-datamodel-backend/src/test/resources/DataModelDependencyExclusionTest1/pom.xml
@@ -14,6 +14,7 @@
     <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging</artifactId>
+      <version>3.1.4.GA</version>
       <scope>test</scope>
     </dependency>
 
@@ -21,6 +22,7 @@
     <dependency>
       <groupId>org.gwtproject</groupId>
       <artifactId>gwt-user</artifactId>
+      <version>2.7.0</version>
       <scope>provided</scope>
     </dependency>
 
