[7.67.x-blue] bumped `guava` to `33.2.1` and `GWT` `2.11.0` (#3830)

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/pom.xml
@@ -33,9 +33,6 @@
   <properties>
     <java.module.name>org.kie.wb.common.stunner.bpmn.api</java.module.name>
     <jacoco.line.coveredratio.minimum>0.0</jacoco.line.coveredratio.minimum>
-
-    <!-- GWTTestCases need this Jetty version to work correctly. -->
-    <version.org.eclipse.jetty>9.2.14.v20151106</version.org.eclipse.jetty>
   </properties>
 
   <dependencies>
@@ -96,7 +93,7 @@
     <!-- GWT. -->
 
     <dependency>
-      <groupId>com.google.gwt</groupId>
+      <groupId>org.gwtproject</groupId>
       <artifactId>gwt-user</artifactId>
       <scope>provided</scope>
     </dependency>
@@ -242,7 +239,7 @@
     </dependency>
 
     <dependency>
-      <groupId>com.google.gwt</groupId>
+      <groupId>org.gwtproject</groupId>
       <artifactId>gwt-dev</artifactId>
       <scope>test</scope>
       <exclusions>
